added the prerequisites to the readme.